# aggregator-sdk

./: .env.example  Cargo.toml  README.md
artifacts/: TaskManager.json
src/: events.rs  lib.rs  main.rs  models.rs  orm.rs  prover_type.rs  tx_sender.rs
src/proof_client/: client.rs  event_handler.rs  mod.rs  proof_handler.rs
