[package]
name = "proofplus-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0" }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"

diesel = { version = "2.2.1", features = ["sqlite"] }

sha2 = "0.10"
bytemuck = "1.16.0"

hex-literal = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-sol-types = { version = "0.7.6" }
alloy-primitives = { version = "0.7.6", default-features = false, features = ["rlp", "serde", "std"] }

tracing = "0.1"
tracing-subscriber = "0.3"

sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "main"}
risc0-zkvm = { version = "1.0.1"}

risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-1.0" }

anyhow = { version = "1.0.75" }

[profile.release]
debug = 1
lto = true

[[bin]]
name = "proofplus-client"
path = "src/main.rs"
